# OpenGEX

./: CMakeLists.txt
OpenDDL/: CMakeLists.txt  ODDLTypes.h
OpenGEX/: CMakeLists.txt  OpenGEX.cpp  OpenGEX.h
